# ThreadAtlas

./: .gitignore  .mcpbignore  README.md  manifest.json  pyproject.toml
.github/workflows/: test.yml
docs/: mcp_setup.md  operator_guide.md  spec.md
prompts/: combined_v1.txt  extraction_v1.txt  profile_v1.txt  turn_classifier_v1.txt
server/: main.py
tests/: conftest.py  corpus_fixtures.py  fake_llm.py  smart_fake_llm.py  test_auto_rules.py  test_canonicalization.py  test_chunking.py  test_cli.py  test_delete_edge_cases.py  test_deletion.py  test_embeddings_and_search_v2.py  test_export.py  test_extraction.py  test_extraction_quality.py  test_groups.py  test_health_check.py  test_import_pipeline.py  test_kmeans.py  test_linking_and_summaries_workbook.py  test_llama_server_backend.py  test_llm_cache.py  test_llm_config.py  test_llm_integration.py  test_llm_pipeline_integration.py  test_llm_pipeline_v2.py  test_llm_prompts.py  test_llm_runner.py  test_mcp.py  test_mcp_query.py  test_mcp_v2.py  test_mcp_writes.py  test_no_network.py  test_parsers.py  test_prompts_and_models_v2.py  test_query_engine.py  test_rebuild_from_normalized.py  test_safe_labels.py  test_search.py  test_state_transitions.py  test_tag_and_resume.py  (+5 more)
threadatlas/: __init__.py  audit.py  health.py  recovery.py  report.py  rescan.py  rules.py
threadatlas/cli/: commands.py  main.py
threadatlas/cluster/: __init__.py  groups.py  kmeans.py  safe_labels.py  tfidf.py
threadatlas/core/: __init__.py  models.py  vault.py  workflow.py
threadatlas/export/: __init__.py  xlsx.py
(+38 files in other folders)
